clean API for share creation
